[package]
name = "ghfs"
version = "0.1.0"
authors = ["White-Green"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuse = "0.3.1"
env_logger = "0.8.1"
libc = "0.2.80"
time = "0.1"
log = "0.4.11"
regex = "1.4.2"
rpassword = "5.0.0"
reqwest = { version = "0.10.8", features = ["blocking"] }
json_flex = "0.3.3"
base64 = "0.13.0"
clap = "2.33.3"
bimap = "0.5.3"
users = "0.11.0"