[package]
name = "ghfs"
version = "0.1.0"
authors = ["White-Green"]
edition = "2018"
description = "mount GitHub repository into local filesystem."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.130"
serde_json = "1.0.67"
serde_derive = "1.0.130"
tokio = { version = "1.11.0", features = ["full"] }
anyhow = "1.0.43"
fuse = "0.3.1"
env_logger = "0.8.1"
libc = "0.2.80"
time = "0.1"
log = "0.4.11"
regex = "1.4.2"
rpassword = "5.0.0"
reqwest = { version = "0.11.4", features = ["json", "serde_json"] }
base64 = "0.13.0"
clap = "2.33.3"
users = "0.11.0"
uuid = { version = "0.8.2", features = ["v4"] }
lru_cache = { git = "https://github.com/White-Green/lru-cache", rev = "04cb9efab124d2d2baede957021654229e4751fd" }
signal-hook = "0.3.10"
signal-hook-tokio = { version = "0.3.0", features = ["futures-v0_3"] }
futures = "0.3.17"
